opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/pam"
bug-reports: "https://github.com/janestreet/pam/issues"
dev-repo: "git+https://github.com/janestreet/pam.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
OCaml bindings for the Linux-PAM library

This provides OCaml bindings for the Linux-PAM (Pluggable Authentication
Modules for Linux) library. It allows OCaml programs to delegate
authentication tasks to the Linux-PAM framework.
"
