opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/pam"
bug-reports: "https://github.com/janestreet/pam/issues"
dev-repo: "git+https://github.com/janestreet/pam.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/pam/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "4.14.0"}
  "core"     {>= "v0.16" & < "v0.17"}
  "ppx_jane" {>= "v0.16" & < "v0.17"}
  "conf-pam"
  "dune"     {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml bindings for the Linux-PAM library"
description: "
This provides OCaml bindings for the Linux-PAM (Pluggable Authentication
Modules for Linux) library. It allows OCaml programs to delegate
authentication tasks to the Linux-PAM framework.
"
depexts: [
  ["pam-devel"] {os-family = "fedora"}
]
